Update messages_tr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -1,12 +1,12 @@
 yes = Evet
 no = Hayır
-percentage = {0,number,\#.\#}%
+percentage = {0,number,#.#}%
 report = Rapor et
 errorDetails = Hata detayları
 cancel = İptal
 dismiss = reddet
 errorTitle = Eyvah\!
-bytesProgress = {1} 'ın {0} 'i
+bytesProgress = {1} ''ın {0} ''i
 messageFromServer = Sunucudan mesaj
 more = Daha
 searchResult = Arama sonucu
@@ -53,7 +53,7 @@ coop.leaderboard.time = zaman
 coop.leaderboard.replay = Tekrar
 coop.leaderboard.allPlayers = Hepsi
 coop.leaderboard.singlePlayer = 1 oyuncu
-coop.leaderboard.numberOfPlayersFormat = {0,number,\#} oyuncular
+coop.leaderboard.numberOfPlayersFormat = {0,number,#} oyuncular
 coop.leaderboard.couldNotLoad = Co-op lider sıralaması yüklenemedi
 coop.couldNotLoad = Co-op lider sıralaması yüklenemedi\: {0}
 ranked1v1.players = Oyuncular (en az {0} oyun oynayan)
@@ -73,10 +73,10 @@ ranked1v1.ratingHint.high = Yüksek derecelisin, niye başkalarının gelişmesi
 ranked1v1.ratingHint.top = Tebrikler\! Zirve oyuncusun. Bilgini paylaş
 ranked1v1.gamesPlayed = Oynanan oyunlar
 ranked1v1.ranking = Senin derecen
-ranked1v1.rankingOutOf = {0,number,\#} kadar oyuncudan
+ranked1v1.rankingOutOf = {0,number,#} kadar oyuncudan
 ranked1v1.searching = Rakip aranıyor
 ranked1v1.winLossRation = kazanma/kaybetme oranı
-ranked1v1.rankingFormat = \#{0,number,\#}
+ranked1v1.rankingFormat = \#{0,number,#}
 ranked1v1.notification.title = 1v1 puanlı maç var
 ranked1v1.notification.message = 1v1 sekmesini açmak için tıkla
 statusBar.chatConnected = Sohbet bağlı
@@ -117,7 +117,7 @@ chat.sendMessageTask.title = Sohbet mesajı gönderiliyor...
 chat.sendActionTask.title = Sohbet aksiyonu gönderiliyor...
 chat.clanTagFormat = [{0}]
 chat.imageUploadTask.title = Resim yükleniyor...
-chat.userCount = {0,number,\#} kullanıcılar (aramak için yaz)
+chat.userCount = {0,number,#} kullanıcılar (aramak için yaz)
 chat.mapName = Harita adı\: {0}
 chat.filter.filter = Süz
 chat.filter.prompt = Kanalda ara
@@ -136,12 +136,12 @@ chat.privateMessage.playerLeft = {0} şu an çevrimdışı
 chat.privateMessage.playerReconnect = {0} şu an çevrimiçi
 chat.privateMessage.globalRating = Genel derece
 chat.privateMessage.ladder1v1Rating = 1v1 derece
-chat.privateMessage.ratingFormat = {0,number,\#}
+chat.privateMessage.ratingFormat = {0,number,#}
 chat.privateMessage.gamesPlayed = Oynanan oyun sayısı
 chat.privateMessage.currentlyPlaying = Şu anda oynuyor
 chat.privateMessage.game.players = Oyuncular
 chat.privateMessage.achievements.unlocked = Açılan başarılar
-chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
+chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Oyun oluştur
 games.create.minRating = En az derece
 games.create.maxRating = en fazla derece
@@ -171,19 +171,19 @@ game.title = Başlık
 game.players = Oyuncular
 game.map = Harita
 game.rating = Derece
-game.ratingFormat.minOnly = >\={0,number,\#}
-game.ratingFormat.maxOnly = <\={0,number,\#}
-game.ratingFormat.minMax = {0,number,\#} - {1,number,\#}
+game.ratingFormat.minOnly = >\={0,number,#}
+game.ratingFormat.maxOnly = <\={0,number,#}
+game.ratingFormat.minMax = {0,number,#} - {1,number,#}
 game.joinGameRatingConfirmation.title = Derecelendirme sınırların dışında
-game.joinGameRatingConfirmation.text = Bu oyun {0,number,\#} dan {1,number,\#} a kadar dereceler için, senin derecen ise {2,number,\#}.\n\nGirmek istediğine emin misin?
+game.joinGameRatingConfirmation.text = Bu oyun {0,number,#} dan {1,number,#} a kadar dereceler için, senin derecen ise {2,number,#}.\n\nGirmek istediğine emin misin?
 game.type = Tip
 game.mods = Modlar
-game.players.format = {0,number,\#}/{1,number,\#}
-game.detail.players.format = {0,number,\#}/{1,number,\#} oyuncular
+game.players.format = {0,number,#}/{1,number,#}
+game.detail.players.format = {0,number,#}/{1,number,#} oyuncular
 game.join = Katıl
 game.cancel = İptal
 game.host = Kurucu
-game.tooltip.teamTitle = Takım {0} ({1,number,\#})
+game.tooltip.teamTitle = Takım {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam = Takım yok
 game.tooltip.observers = İzleyiciler
 game.join.passwordPrompt = Oyun şifresini gir
@@ -192,7 +192,7 @@ game.start.couldNotStart = Oyun başlatılamadı.Aşağıda detaylara bak
 game.full = Oyun dolu
 game.full.action = Açmak için tıkla
 # Fuzzy
-game.mods.twoAndMore = {0} ve {1,number,\#} daha
+game.mods.twoAndMore = {0} ve {1,number,#} daha
 game.gameStatus = Oyun durumu
 game.gameStatus.playing = Oynuyor
 game.gameStatus.lobby = Başlamak için bekliyor
@@ -206,10 +206,15 @@ game.endTime = Bitme zamanı
 game.validity = Geçerlilik
 game.victoryCondition = Kazanma şartı
 game.player.id = Oyuncu id'si
+# Fuzzy
 game.player.username = Oyuncu adı
+# Fuzzy
 game.player.faction = Oyuncu ırkı
+# Fuzzy
 game.player.team = Oyuncunun takımı
+# Fuzzy
 game.player.startSpot = Oyuncunun başlama pozisyonu
+# Fuzzy
 game.player.score = Oyuncu skoru
 game.host.id = Kurucu Id'si
 game.host.username = Kurucu kullanıcı adı
@@ -218,6 +223,7 @@ game.map.width = Harita genişliği(px)
 game.map.version = Harita versiyonu
 game.map.folderName = Harita dosya adı
 game.map.isRanked = Harita dereceli
+# Fuzzy
 game.map.displayName = Harita adı
 game.options = Oyun seçenekleri
 game.optionKey = Seçenek
@@ -233,7 +239,7 @@ game.watch = İzle
 game.watchButtonFormat = İzle ({0})
 game.watchDelayedFormat = İzlenebilir {0}
 game.replayFileMissing = Tekrar dosyası kayıp
-game.idFormat = \#{0,number,\#}
+game.idFormat = \#{0,number,#}
 game.lineUp = Sıralama
 featuredMod.displayName = Oyun mod ismi
 featuredMod.technicalName = Oyun mod kısaltması
@@ -249,8 +255,10 @@ login.button.cancel = İptal
 login.progress.message = Giriş yapılıyor...
 vault.maps = Haritalar
 vault.mods = Modlar
+# Fuzzy
 vault.onlineReplays = Çevrimiçi oyun tekrarları
 vault.localReplays = Yerel Oyun tekrarları
+# Fuzzy
 vault.liveReplays = Canlı yayın oyun tekrarları
 vault.replays.loading = Tekrarlar yükleniyor...
 vault.replays.newest = En yakın
@@ -262,7 +270,9 @@ vault.more = Daha...
 modVault.newestMods = En yakın
 modVault.install = Yükle
 modVault.uninstall = Kaldır
+# Fuzzy
 modVault.installationFailed = Mod "{0}" yüklenemedi\: {1}
+# Fuzzy
 modVault.couldNotDeleteMod = Mod "{0}" silinemedi\: {1}
 modVault.loadingMods = Modlar yükleniyor...
 modVault.upload.chooseDirectory = Mod dizinini seç
@@ -291,8 +301,8 @@ mapVault.upload.failed = Harita karşıya yükleme başarısız.Sunucu şu hatal
 mapVault.upload.mapSize = Boyut
 mapVault.upload.players = Oyuncular
 mapVault.upload.chooseDirectory = Harita dizinini seç
-mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
-mapVault.upload.playersFormat = {0,number,\#}
+mapVault.upload.sizeFormat = {0,number,#}km x {1,number,#}km
+mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Bu haritanın düzgünce dengelendiğini ve yasaklı kod içermediğini onaylıyorum.İhlalin oyundan atılma ile sonuçlanacağının farkındayım.Bunu işaretlememek haritayı derecesiz olarak atayacaktır
 mapVault.upload.retry = Yeniden dene
 mapVault.loadingMaps = Haritalar yükleniyor...
@@ -316,12 +326,14 @@ map.ranked = Dereceli
 map.reviews = Yorumlar
 map.updated = Karşıya yüklenmiş
 map.maxPlayers = En fazla oyuncu
+# Fuzzy
 map.width = Genişlik (px)
+# Fuzzy
 map.height = Yükseklik (px)
 map.uploadedDateTime = Karşıya yükleme Tarihi
 map.updatedDateTime = Güncelleme tarihi
 mapPreview.name = Harita ismi\:{0}
-mapPreview.size = {0,number,\#}km x {1,number,\#}km
+mapPreview.size = {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message = Harita önizleme yüklenemiyor
 replays.loadingOnlineTask.title = Çevrimiçi tekrarlar yükleniyor...
 replays.loadingOnlineTask.failed = Çevrimiçi tekrarlar yüklenemedi.
@@ -373,44 +385,46 @@ userInfo.ratingOverTime = Zamana göre derece
 userInfo.ratingHistory.1v1 = 1v1
 userInfo.ratingHistory.global = Küresel
 userInfo.achievements = Başarılar
-userInfo.tooltipFormat = {0} ({1,number,\#})
-userInfo.ratingFormat = Genel derece\: {0,number,\#}\nLider sıralaması derece\: {1,number,\#}
+userInfo.tooltipFormat = {0} ({1,number,#})
+userInfo.ratingFormat = Genel derece\: {0,number,#}\nLider sıralaması derece\: {1,number,#}
 user.status.hosting = Kuruyor\: {0}
 user.status.waiting = Burda bekliyor\: {0}
 user.status.playing = Oynuyor\: {0}
-achievement.stepsFormat = {0,number,\#}/{1,number,\#}
+achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = En yeni
 achievements.loading = Başarılar yükleniyor...
-achievements.unlocked = Açıldı ({0,number,\#})
-achievements.locked = Açmak için ({0,number,\#})
+achievements.unlocked = Açıldı ({0,number,#})
+achievements.locked = Açmak için ({0,number,#})
 replayServer.listeningFailed = Tekrar sunucusu başlatılamadı
 replayServer.retry = Yeniden dene
 replayServer.unreachable = Tekrar sunucusuna ulaşılamıyor, oyun kaydedilemez
+# Fuzzy
 corruptedMods.notification = Mod hatalı ve yüklenemez\: {0}.
 corruptedMods.show = Göster
 corruptedReplayFiles.notification = Diskinizdeki bozulmuş tekrar dosyaları , konforunuz için farklı bir dosyaya taşındı
 corruptedReplayFiles.show = Göster
-mapNotFound = Harita ''{0}'' ne sunucuda ne de bu bilgisayarda bulunamadı
-replayCouldNotBeStarted = Tekrar {0,number,\#} başlatılamadı\: Aşağıda hata mesajına bakın
+# Fuzzy
+mapNotFound = Harita ''''{0}'''' ne sunucuda ne de bu bilgisayarda bulunamadı
+replayCouldNotBeStarted = Tekrar {0,number,#} başlatılamadı\: Aşağıda hata mesajına bakın
 liveReplayCouldNotBeStarted = Canlı tekrar başlatılamadı. Aşağıda hata mesajına bakın
-duration.seconds = {0,number,\#}s
-duration.minutesSeconds = {0,number,\#}min {1,number,\#}s
-duration.hourMinutes = {0,number,\#}h {1,number,\#}dk
+duration.seconds = {0,number,#}s
+duration.minutesSeconds = {0,number,#}min {1,number,#}s
+duration.hourMinutes = {0,number,#}h {1,number,#}dk
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = u0020vsu0020
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator = ,u0020
-secondsAgo = {0,number,\#} saniye önce
-minuteAgo = {0,number,\#} dakika önce
-minutesAgo = {0,number,\#} dakika önce
-hourAgo = {0,number,\#} saat önce
-hoursAgo = {0,number,\#} saat önce
-dayAgo = {0,number,\#} gün önce
-daysAgo = {0,number,\#} gün önce
-monthAgo = {0,number,\#} ay önce
-monthsAgo = {0,number,\#} ay önce
-yearAgo = {0,number,\#} yıl önce
-yearsAgo = {0,number,\#} yıl önce
+secondsAgo = {0,number,#} saniye önce
+minuteAgo = {0,number,#} dakika önce
+minutesAgo = {0,number,#} dakika önce
+hourAgo = {0,number,#} saat önce
+hoursAgo = {0,number,#} saat önce
+dayAgo = {0,number,#} gün önce
+daysAgo = {0,number,#} gün önce
+monthAgo = {0,number,#} ay önce
+monthsAgo = {0,number,#} ay önce
+yearAgo = {0,number,#} yıl önce
+yearsAgo = {0,number,#} yıl önce
 settings.languages.restart.message = Dilinizi değiştirdiniz, yeniden başlatma gerekli
 settings.languages.restart = Yeniden başla
 settings.languages.system = Otomatik
@@ -429,6 +443,7 @@ settings.chat.previewImages = URL üzerinde resim önizleme
 settings.chat.colors = Renkler
 # Fuzzy
 settings.chat.timeFormat = Zaman formatı
+# Fuzzy
 settings.chat.colorMode.default = Varsayılan\: Tüm kullanıcılar için varsayılan renkleri kullan
 settings.chat.colorMode.custom = Özel\: Belli kullanıcılar için özel renklere izin ver
 settings.chat.colorMode.random = Rastgele\: Her kullanıcı benzersiz, rastgele renge sahip
@@ -464,7 +479,7 @@ settings.notifications.friendOnline = Arkadaş çevrimiçi
 settings.notifications.friendJoinsGame = Arkadaş oyuna katıldı
 settings.notifications.friendPlaysGame = Arkadaş oyun oynuyor
 settings.notifications.friendOffline = Arkadaş çevrimdışı
-settings.screenFormat = ekran {0,number,\#}
+settings.screenFormat = ekran {0,number,#}
 settings.account = Hesap
 settings.account.changePassword = Parolayı değiş
 settings.account.currentPassword = Mevcut parola
@@ -509,7 +524,7 @@ review.starsTip.four = Beğendim
 review.starsTip.five = Çok beğendim
 reviews.title = Değerlendirmeler
 reviews.myReview = Benim değerlendirmem
-reviews.totalReviewers = {0,number,\#} toplam
+reviews.totalReviewers = {0,number,#} toplam
 reviews.create = Değerlendirme yaz
 reviewScore.five = 5
 reviewScore.four = 4
@@ -549,6 +564,7 @@ mod.uploadedDateTime = Karşıya yüklendi
 mod.updatedDateTime = Güncellendi
 mod.id = ID
 mod.uid = UID
+# Fuzzy
 mod.type = Tip
 mod.ranked = Dereceli
 mod.filename = Dosya adı
@@ -571,6 +587,7 @@ search.sort = sırala
 vault.mods.searchError = Modlar yüklenemedi
 noDateAvailable = Tarih mevcut değil
 map.created = Yaratıldı\:
+# Fuzzy
 modType.ui = Kullanıcı arayüz(ui) modu
 modType.sim = Sim mod
 menu.connect = Bağlanıyor
@@ -609,7 +626,7 @@ settings.chat.chatFormat.extended = Genişletilmiş
 settings.chat.chatFormat.compact = Sıkı
 game.create.onlyFriends = Sadece arkadaşlara göster
 unknown = Bilinmeyen
-dateWithTime = {0} {1} 'da
+dateWithTime = {0} {1} ''da
 main.tournaments = Turnuvalar
 tournament.name = İsim
 tournament.status.finished = Bitti
@@ -620,11 +637,11 @@ tournament.noStartingDate = Başlama tarihi seçilmedi
 tournament.noCompletionDate = Henüz tamamlanmadı
 loading = Yükleniyor...
 updater.readingFileList = Dosya listesi okunuyor
-secondAgo = {0,number,\#} saniye önce
+secondAgo = {0,number,#} saniye önce
 vault.maps.searchError = Harita yüklenemedi
 settings.notifications.displayNotification = Bildirimi göster
 replay.notFoundTitle = Oyun bulunamadı
-replay.replayNotFoundText = id'si "{0}" olan oyun bulunamadı
+replay.replayNotFoundText = id''si "{0}" olan oyun bulunamadı
 settings.notifications.afterGameReview = Oyun incelemesinden sonra
 tournament.openOnChallonge = challonge.com'da aç
 tournament.gameType = Oyun tipi\:
@@ -644,33 +661,35 @@ settings.appearance.chooseImage = Resim seç
 settings.general.theme.useNoImage = Resim yok
 query.notContains = İçermiyor
 coop.unknownMission = Bilinmeyen görev
-game.couldNotJoin = İd'si "{0}" olan oyna katılınamadı.
+# Fuzzy
+game.couldNotJoin = İd''si "{0}" olan oyna katılınamadı.
 discord.disallowJoins = Discord ile bağlananlara izin verme
 # Fuzzy
-replay.couldNotOpen = İd'si "{0}" olan tekrar açılamadı
+replay.couldNotOpen = İd''si "{0}" olan tekrar açılamadı
 view.showSidePane = Detayları göster
 view.hideSidePane = Detayları gizle
 menu.revealReplayFolder = Tekrar klasörünü göster
 menu.revealGamePrefsFile = game.prefs dosyasını göster
 ranked1v1.queuePopTimer = eşleşiliyor {0,number,0}\:{1,number,00}
 game.create.generatedMap = Yeni harita oluştur
-game.avgRating.format = {0,number,\#}
+game.avgRating.format = {0,number,#}
 game.mapGeneration.notification.title = Harita oluşturuluyor...
 game.mapGeneration.notification.message = Lütfen beklemede kalın (Version\: {0}, Seed\: {1})
 game.mapGeneration.failed.title = Harita oluşturma başarısız oldu.
 game.mapGeneration.failed.message = İstenen harita oluşturulamadı, harita oluşturma işlemi zamanaşımı ile sonlanmadı.İşlem sonladırılıyor
 game.mapGeneration.downloadGenerator.title = Harita oluşturucu versiyonu {0} indiriliyor
+# Fuzzy
 game.mapGeneration.generateMap.title = Harita oluşturuluyor... (Version\: {0}, Seed\: {1})
 login.environment = Çevre
 login.button.downloadUpdate = Son sürümü indir
 login.button.downloadPreparing = İndirme hazırlanıyor
-login.button.downloadProgress = İndirme  {0,number,0%} 'da
+login.button.downloadProgress = İndirme  {0,number,0%} ''da
 login.clientTooOldError = Bu istemci sürümü {0} çok eski. Sunucu en azından {1} sürümüne ihtiyaç duyuyor. Lütfen daha yeni bir sürüme güncelleyin
 login.ircServerHost = IRC sunucu evsahibi
 login.withEmailWarning = Lütfen kullanıcı adınızla giriş yapınız, emaille değil
 vault.next = Sonraki
 vault.previous = Önceki
-vault.currentPage = Sayfa\: {0,number,\#}
+vault.currentPage = Sayfa\: {0,number,#}
 settings.appearance.useNone = Görüntü kullanma
 settings.chat.addAutoJoinChannel = Kanal ekle
 settings.chat.removeAutoJoinChannel = Kaldır
@@ -706,14 +725,15 @@ chat.userContext.kickLobby = lobiden at...
 moderator.ban.reason = atma sebebi
 moderator.ban.duration = ban süresi
 moderator.ban.success = başarıyla atıldı ve banlandı
-moderator.ban.user = Kullanıcı "{0}"\: 'yı banla
+moderator.ban.user = Kullanıcı "{0}"\: ''yı banla
 main.tutorials = Öğreticiler
 tutorial.category = Kategori
 tutorial.tutorial = Öğreticiler
 tutorial.launch = Öğreticileri başlat
 tutorial.mapName = Harita adı\: {0}
 tutorial.launchFailed = Öğretici başlatma başarısız
-mapVault.installationFailed = ''{0}'' harita yüklemesi, ''{1}'' mesajıyla başarısız oldu
+# Fuzzy
+mapVault.installationFailed = ''''{0}'''' harita yüklemesi, ''''{1}'''' mesajıyla başarısız oldu
 tutorial.loading = Öğreticiler yükleniyor
 tutorial.noneAvailable = Şu an hiçbir öğretici yok
 clientUpdateAvailable.prereleaseNotification = Önsürüm {0} uygun ({1})
