Add invite item to chat context menu

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -138,7 +138,7 @@ chat.userContext.removeFoe=Remove foe
 chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
-chat.userContext.inviteToGame=Invite to game
+chat.userContext.inviteToGame=Invite to party
 chat.userContext.report=Report player
 chat.userContext.kickGame=Kick from game…
 chat.userContext.kickLobby=Kick from lobby…
