Convert to using leaderboards over hardcoded ratings

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -45,10 +45,14 @@ main.mods=Mods
 main.units=Units
 main.leaderboards=Leaderboards
 main.tournaments=Tournaments
-leaderboard.ranked1v1=1v1 Rating
-leaderboard.global=Global Rating
+leaderboard.tmm_2v2.name=2v2
+leaderboard.ladder_1v1.name=1v1
+leaderboard.global.name=Global
+leaderboard.gamesPlayed={0} Games Played: {1,number,#}
+leaderboard.rating={0} Rating
 leaderboard.divisionName=In Placement
 play.teamMatchmaking=Matchmaking
+leaderboard.displayName=Leaderboard
 play.custom=Custom games
 play.coop=Co-Op
 leaderboard.failedToLoad=Leaderboard could not be loaded
@@ -70,7 +74,6 @@ coop.leaderboard.numberOfPlayersFormat={0,number,#} players
 coop.leaderboard.couldNotLoad=Co-Op leaderboard could not be loaded.
 coop.couldNotLoad=Co-Op missions could not be loaded: {0}
 coop.watchReplay=Watch
-ranked1v1.gamesPlayed=Games played
 teammatchmaking.leaveParty=Leave party
 teammatchmaking.invitePlayer=Invite players
 teammatchmaking.invite=Invite
@@ -498,7 +501,8 @@ serInfo.statistics.errorLoading=Could not load statistics
 userInfo.achievements=Achievements
 userInfo.achievements.errorLoading=Could not load achievements
 userInfo.achievements.errorLDisplaying=Could not display achievements
-userInfo.tooltipFormat={0} ({1,number,#})
+userInfo.tooltipFormat.withRating={0} ({1,number,#})
+userInfo.tooltipFormat.noRating={0}
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
 userInfo.idleTimeFormat=Last seen: {0}
 userInfo.nameHistory=Name history
