Finish coverage of replay detail

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -725,6 +725,7 @@ replay.noTeam=No Teams
 replay.playerCountTooltip=Players
 replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
+replay.enrich.error=Information could not be downloaded
 game.showRatingChange=Show rating change
 game.reasonNotValid=Game was not rated. Reason: {0}
 game.reasonNotValid.desync=Too Many Desyncs
