Team Matchmaker Integration (#2059)
Integrate TMM server messages and api objects

Add TMM UI tab in place of ladder 1v1 tab

Co-authored-by: geosearchef <geosearchef@googlemail.com>
Co-authored-by: alexander <alexander.von.trostorff@gmail.com>
Co-authored-by: Michel Jung <michel.jung89@gmail.com>

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -47,8 +47,9 @@ main.leaderboards=Leaderboards
 main.tournaments=Tournaments
 leaderboard.ranked1v1=1v1 Rating
 leaderboard.global=Global Rating
+leaderboard.divisionName=In Placement
+play.teamMatchmaking=Matchmaking
 play.custom=Custom games
-play.ranked1v1=1v1 ranked match
 play.coop=Co-Op
 leaderboard.failedToLoad=Leaderboard could not be loaded
 leaderboard.loading=Loading leaderboard…
@@ -69,31 +70,40 @@ coop.leaderboard.numberOfPlayersFormat={0,number,#} players
 coop.leaderboard.couldNotLoad=Co-Op leaderboard could not be loaded.
 coop.couldNotLoad=Co-Op missions could not be loaded: {0}
 coop.watchReplay=Watch
-ranked1v1.you=You
-ranked1v1.players=Players (with at least {0} games played)
-ranked1v1.play=Play
-ranked1v1.cancel=Cancel
-ranked1v1.choseFactions.title=Select factions
-ranked1v1.choseFactions.description=When the match starts, one of your selected factions will be assigned to you.
-ranked1v1.queuePopTimer=Matching in {0,number,0}:{1,number,00}
-ranked1v1.rating.title=Your rating
-ranked1v1.rankingDistribution=Rating distribution
-ranked1v1.rankingDistribution.x=Rating
-ranked1v1.rankingDistribution.y=Players
-ranked1v1.ratingProgress.stillLearning=The system is still learning your skill. Play more games to finish the progress.
-ranked1v1.ratingHint.low=Your rating is low. Ask for a trainer to get started with the game basics.
-ranked1v1.ratingHint.moderate=Your rating is moderate. Keep learning the game mechanics to improve.
-ranked1v1.ratingHint.good=Your rating is good. Focus on details to improve.
-ranked1v1.ratingHint.high=Your rating is high. Why not help others to improve?
-ranked1v1.ratingHint.top=Congratulations! You're a top player. Share your knowledge.
 ranked1v1.gamesPlayed=Games played
-ranked1v1.ranking=Your rank
-ranked1v1.rankingOutOf=out of {0,number,#} players
-ranked1v1.searching=Searching for opponent…
-ranked1v1.winLossRation=Win/loss ratio
-ranked1v1.rankingFormat=#{0,number,#}
-ranked1v1.notification.title=1v1 ranked match available
-ranked1v1.notification.message=Click here to open the 1v1 tab
+teammatchmaking.leaveParty=Leave party
+teammatchmaking.invitePlayer=Invite players
+teammatchmaking.invite=Invite
+teammatchmaking.invitedPlayers=Invited players:
+teammatchmaking.mapPool=Maplist
+teammatchmaking.playersInQueue=In Queue: {0,number,#}
+teammatchmaking.queuePopTimer=Matching in: {0,number,0}:{1,number,00}
+teammatchmaking.gameCount=Games played: {0,number,#}
+teammatchmaking.notification.invite.title=Invited to party
+teammatchmaking.notification.invite.message={0} has invited you to join their party
+teammatchmaking.notification.invite.join=Join
+teammatchmaking.match.found=Match found!
+teammatchmaking.match.starting=Match launching...
+teammatchmaking.match.cancelled=Match cancelled!
+teammatchmaking.notification.matchFound.title=Match found
+teammatchmaking.notification.matchFound.message=A match was found and will launch soon
+teammatchmaking.notification.inviteAlreadyInQueue.title=You are already in a queue
+teammatchmaking.notification.inviteAlreadyInQueue.message=Please leave all queues before inviting a player
+teammatchmaking.notification.joinAlreadyInQueue.title=You are already in a queue
+teammatchmaking.notification.joinAlreadyInQueue.message=Please leave all queues before joining a party
+teammatchmaking.notification.customAlreadyInQueue.title=You are already in a matchmaking queue
+teammatchmaking.notification.customAlreadyInQueue.message=Please leave all queues before joining a custom game
+teammatchmaking.notification.gameAlreadyRunning.title=Already in game
+teammatchmaking.notification.gameAlreadyRunning.message=You cannot join a queue while you're in game
+teammatchmaking.playerTitle=Playing matchmaking as:
+teammatchmaking.partyTitle=Your party:
+teammatchmaking.queueTitle=Join one or more queues when you are ready:
+teammatchmaking.queueTitle.inGame=Can't join queues while you are in a game
+teammatchmaking.queueTitle.memberInGame=Can't join queues while someone is in a game
+teammatchmaking.queueTitle.inParty=The party leader will join the queues
+teammatchmaking.queueTitle.inQueue=Your party is now in queue
+teammatchmaking.queue.ladder1v1=1v1 Queue
+teammatchmaking.queue.tmm2v2=2v2 Queue
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
@@ -127,7 +137,7 @@ chat.userContext.removeFoe=Remove foe
 chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
-chat.userContext.inviteToGame=Invite to game
+chat.userContext.inviteToGame=Invite to party
 chat.userContext.report=Report player
 chat.userContext.kickGame=Kick from game…
 chat.userContext.kickLobby=Kick from lobby…
@@ -162,6 +172,8 @@ chat.privateMessage.currentlyPlaying=Currently playing
 chat.privateMessage.game.players=Players
 chat.privateMessage.achievements.unlocked=Achievements unlocked
 chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
+chat.groupChat.playerDisconnect={0} has disconnected
+chat.groupChat.playerConnect={0} has connected
 games.create=Create game
 games.create.minRating=Min.
 game.create.generationType=Type of generated map:\nCausal - Client and lobby preview generated.\nTournament - Forces all random, Client preview not generated and time stamp added to map description.\nBlind - Forces all random, Client and Lobby preview not generated and time stamp added to map description.
