Correct error message

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -904,6 +904,6 @@ review.currentVersion=Current Version
 review.version=Version {0}
 review.date={0} on {1}
 review.delete.error=This review could not be deleted
-review.save.error=This review could not be deleted
+review.save.error=This review could not be saved
 label.copy=copy
 gameUpdate.error.gameNotWritableAllowMultiOn=The game could not be patched to the required version for this game launch. You are trying to watch a replay or open a game of a conflicting version to the one you have already opened.
