Add unexplored, mex, and reclaim options

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -176,7 +176,7 @@ chat.groupChat.playerDisconnect={0} has disconnected
 chat.groupChat.playerConnect={0} has connected
 games.create=Create game
 games.create.minRating=Min.
-game.create.generationType=Type of generated map:\nCausal - Client and lobby preview generated.\nTournament - Forces all random, Client preview not generated and time stamp added to map description.\nBlind - Forces all random, Client and Lobby preview not generated and time stamp added to map description.
+game.create.generationType=Type of generated map:\nCausal - Client and lobby preview generated.\nTournament - Forces all random, Client preview not generated and time stamp added to map description.\nBlind - Forces all random, Client and Lobby preview not generated and time stamp added to map description.\nUnexplored - Map terrain and resources need to be revealed by units
 game.create.spawnCount=Number of spawns
 game.create.mapSize=Map Size
 games.create.maxRating=Max.
@@ -210,11 +210,14 @@ game.generateMap.waterSlider=Water
 game.generateMap.plateauSlider=Plateaus
 game.generateMap.mountainSlider=Mountains
 game.generateMap.rampSlider=Ramps
+game.generateMap.mexSlider=Mexes
+game.generateMap.reclaimSlider=Reclaim
 game.generateMap.random=Random
 game.generateMap.generationType=Generation Type
 game.generateMap.casual=Casual
 game.generateMap.tournament=Tournament
 game.generateMap.blind=Blind
+game.generateMap.unexplored=Unexplored
 game.generateMap.less=Less
 game.generateMap.more=More
 game.rehost.failed=Rehosting game failed.
