Clean up detail controllers and add unit tests (#2075)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -728,6 +728,7 @@ replay.noTeam=No Teams
 replay.playerCountTooltip=Players
 replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
+replay.enrich.error=Information could not be downloaded
 game.showRatingChange=Show rating change
 game.reasonNotValid=Game was not rated. Reason: {0}
 game.reasonNotValid.desync=Too Many Desyncs
@@ -905,5 +906,7 @@ games.create.enforceRating=Enforce rating
 review.currentVersion=Current Version
 review.version=Version {0}
 review.date={0} on {1}
+review.delete.error=This review could not be deleted
+review.save.error=This review could not be saved
 label.copy=copy
 gameUpdate.error.gameNotWritableAllowMultiOn=The game could not be patched to the required version for this game launch. You are trying to watch a replay or open a game of a conflicting version to the one you have already opened.
