Remove ability to watch replays while in queue

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -880,6 +880,7 @@ game.gameRunning=Game could not be started because an instance of Forged Allianc
 gameQuality.undefined=-
 map.unknown=unknown
 replay.gameRunning=Replay could not be started because another instance of Forged Alliance is already running. You can turn on the experimental feature to watch replays while in lobby in settings.
+replay.inqueue=Replay could not be started because you are in a matchmaker queue. Exit the queue to watch replays.
 replay.ignoreMapNotFound=Ignore and start replay
 replay.abortAfterMapNotFound=Abort and show more info
 replay.mapDownloadFailed=Map download failed for this replay
