Add in check for if you are in someone else's party

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -881,6 +881,7 @@ gameQuality.undefined=-
 map.unknown=unknown
 replay.gameRunning=Replay could not be started because another instance of Forged Alliance is already running. You can turn on the experimental feature to watch replays while in lobby in settings.
 replay.inQueue=Replay could not be started because you are in a matchmaker queue. Exit the queue to watch replays.
+replay.inParty=Replay could not be started because you are in a party. Leave the party to watch replays.
 replay.ignoreMapNotFound=Ignore and start replay
 replay.abortAfterMapNotFound=Abort and show more info
 replay.mapDownloadFailed=Map download failed for this replay
