Fix mod map mix up

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -905,7 +905,7 @@ mod.manager.simModsTooltip=SIM mods are such mods that effect the game play of a
 mod.manager.uiModsTooltip=UI mods are mods that only effect how you see the game.
 modVault.modManager=Manage active mods
 modVault.manageMods=Manage active mods
-modVault.upload.rules=I confirm that I have read the rules concerning map upload.
+modVault.upload.rules=I confirm that I have read the rules concerning mod upload.
 theme.needsRestart.message=Changing the theme to ''{0}'' might require a restart.
 theme.needsRestart.quit=Quit
 discord.join=Join FAF on Discord
