Add league leaderboards

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -38,6 +38,7 @@ play.ranked1v1 = 1v1 ranked match
 play.coop = Co-Op
 leaderboard.failedToLoad = Leaderboard could not be loaded
 leaderboard.loading = Loading leaderboard…
+leaderboard.noLeaderboards = There seem to be no leaderboards available
 coop.host.title = Host this Mission
 coop.host.button = Host Game
 coop.leaderboard = Leaderboard
@@ -970,49 +971,66 @@ vault.savedQueries = Favorites
 vault.saveQuery = Save Query
 map.onlyRanked = Only Ranked
 map.reviewScore = Review Score
-map.widthPixels=Width (in px)
-map.heightPixels=Height (in px)
-query.moreFilters=More Filters
-query.textFilter={0}\: {1}
-query.categoryFilter={0}\: {1}
-query.rangeFilter={0}\: {1} to {2}
-query.dateRangeFilter={0}\: from {1} to {2}
-query.afterDate=After
-query.beforeDate=Before
-mod.onlyRanked=Only Ranked
-mod.reviewScore=Review Score
-search.lowValue=Minimum
-search.highValue=Maximum
-search.afterDate=Start Date
-search.beforeDate=End Date
-search.removeQuery=Remove Query
-game.globalRating=Global Rating
-game.ladderRating=Ladder Rating
-leaderboard.divisionName=In Placement
-play.teamMatchmaking=Matchmaking
+map.widthPixels = Width (in px)
+map.heightPixels = Height (in px)
+query.moreFilters = More Filters
+query.textFilter = {0}\: {1}
+query.categoryFilter = {0}\: {1}
+query.rangeFilter = {0}\: {1} to {2}
+query.dateRangeFilter = {0}\: from {1} to {2}
+query.afterDate = After
+query.beforeDate = Before
+mod.onlyRanked = Only Ranked
+mod.reviewScore = Review Score
+search.lowValue = Minimum
+search.highValue = Maximum
+search.afterDate = Start Date
+search.beforeDate = End Date
+search.removeQuery = Remove Query
+game.globalRating = Global Rating
+game.ladderRating = Ladder Rating
+leaderboard.Ladder1v1League = 1v1 League
+leaderboard.TMM2v2League = 2v2 League
+leaderboard.team = Team League
+leaderboard.season.1v1League.season.2 = 1v1 Testseason 2
+leaderboard.season.2v2League.season.2 = 2v2 Testseason 2
+leaderboard.searchPrompt = Search player or rank...
+leaderboard.score = Score
+leaderboard.rank = Rank \#{0,number,#} out of {1,number,#} players
+leaderboard.totalPlayers = {0,number,#} players
+leaderboard.divisionName = {0} {1}
+leaderboard.placement = The System is still learning you. {0} out of {1} games played
+leaderboard.noEntry = Play matchmaker games to get assigned to a division
+leagues.divisionName.1 = Bronze
+leagues.divisionName.2 = Silver
+leagues.divisionName.3 = Gold
+leagues.divisionName.4 = Diamond
+leagues.divisionName.5 = Master
+leagues.divisionName.6 = Grandmaster
+play.teamMatchmaking = Matchmaking
 teammatchmaking.searchAndInvite=Search and invite players
 teammatchmaking.search.prompt=Name
 teammatchmaking.search.noOneInvited=You have not invited anybody yet
-teammatchmaking.leaveParty=Leave party
-teammatchmaking.invitePlayer=Invite players
-teammatchmaking.invite=Invite
-teammatchmaking.invitedPlayers=Invited players\:
-teammatchmaking.mapPool=Maplist
-teammatchmaking.playersInQueue=In Queue\: {0,number,#}
-teammatchmaking.queuePopTimer=Matching in\: {0,number,0}\:{1,number,00}
-teammatchmaking.gameCount=Games played\: {0,number,#}
-teammatchmaking.notification.invite.title=Invited to party
-teammatchmaking.notification.invite.message={0} has invited you to join their party
-teammatchmaking.notification.invite.join=Join
-teammatchmaking.match.found=Match found\!
-teammatchmaking.match.starting=Match launching...
-teammatchmaking.match.cancelled=Match cancelled\!
-teammatchmaking.notification.matchFound.title=Match found
-teammatchmaking.notification.matchFound.message=A match was found and will launch soon
-teammatchmaking.notification.inviteAlreadyInQueue.title=You are already in a queue
-teammatchmaking.notification.inviteAlreadyInQueue.message=Please leave all queues before inviting a player
-teammatchmaking.notification.joinAlreadyInQueue.title=You are already in a queue
-teammatchmaking.notification.joinAlreadyInQueue.message=Please leave all queues before joining a party
+teammatchmaking.leaveParty = Leave party
+teammatchmaking.invitePlayer = Invite players
+teammatchmaking.invite = Invite
+teammatchmaking.invitedPlayers = Invited players\:
+teammatchmaking.mapPool = Maplist
+teammatchmaking.playersInQueue = In Queue\: {0,number,#}
+teammatchmaking.queuePopTimer = Matching in\: {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount = Games played\: {0,number,#}
+teammatchmaking.notification.invite.title = Invited to party
+teammatchmaking.notification.invite.message = {0} has invited you to join their party
+teammatchmaking.notification.invite.join = Join
+teammatchmaking.match.found = Match found\!
+teammatchmaking.match.starting = Match launching...
+teammatchmaking.match.cancelled = Match cancelled\!
+teammatchmaking.notification.matchFound.title = Match found
+teammatchmaking.notification.matchFound.message = A match was found and will launch soon
+teammatchmaking.notification.inviteAlreadyInQueue.title = You are already in a queue
+teammatchmaking.notification.inviteAlreadyInQueue.message = Please leave all queues before inviting a player
+teammatchmaking.notification.joinAlreadyInQueue.title = You are already in a queue
+teammatchmaking.notification.joinAlreadyInQueue.message = Please leave all queues before joining a party
 teammatchmaking.notification.customAlreadyInQueue.title = You are already in a matchmaking queue
 teammatchmaking.notification.customAlreadyInQueue.message = Please leave all queues before joining a custom game
 teammatchmaking.notification.gameAlreadyRunning.title = Already in game
