--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -919,3 +919,4 @@ review.delete.error=This review could not be deleted
 review.save.error=This review could not be saved
 label.copy=copy
 gameUpdate.error.gameNotWritableAllowMultiOn=The game could not be patched to the required version for this game launch. You are trying to watch a replay or open a game of a conflicting version to the one you have already opened.
+map.updater.search=Search for a new version of the map
