Remove password reset

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -649,7 +649,7 @@ settings.account.confirmPassword.mismatch=The new password and the confirmation 
 settings.account.changePassword.changing=Your password is being changed…
 settings.account.changePassword.success=Your password was changed.
 settings.account.changePassword.error=Your password was not changed due to an error ({0}).
-settings.account.goWebsite=For most account related activities you need to visit our website
+settings.account.goWebsite=For account related activities you need to visit our website
 settings.account.goWebsiteButton=Visit the FAForever Website
 settings.account.username=FAF Username
 settings.account.username.change=Change username
