Update messages_cat.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cat.properties
+++ b/src/main/resources/i18n/messages_cat.properties
@@ -107,6 +107,7 @@ chat.userContext.removeFoe = Esborra enemic
 chat.userContext.viewLiveReplay = Observa la partida
 chat.userContext.joinGame = Uneix-te a la partida
 chat.userContext.viewReplays = Visualitza repeticions
+# Fuzzy
 chat.userContext.inviteToGame = Convida a la partida
 chat.userContext.kick = Expulsa...
 chat.userContext.ban = Prohibeix...
