Update messages_zh.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -110,6 +110,7 @@ chat.userContext.removeFoe = 移除敌人
 chat.userContext.viewLiveReplay = 观看比赛
 chat.userContext.joinGame = 加入游戏
 chat.userContext.viewReplays = 查看录像
+# Fuzzy
 chat.userContext.inviteToGame = 邀请参加比赛
 chat.userContext.kick = 踢出……
 chat.userContext.ban = 禁止……
