Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -110,6 +110,7 @@ chat.userContext.removeFoe = Odebrat nepřítele
 chat.userContext.viewLiveReplay = Sledovat hru
 chat.userContext.joinGame = Připojit se ke hře
 chat.userContext.viewReplays = Sledovat záznam
+# Fuzzy
 chat.userContext.inviteToGame = Pozvat do hry
 chat.userContext.kick = Vykopnout...
 chat.userContext.ban = Zabanovat...
