Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -113,6 +113,7 @@ chat.userContext.removeFoe = Vijand verwijderen
 chat.userContext.viewLiveReplay = Spel bekijken
 chat.userContext.joinGame = Ga een spel binnen
 chat.userContext.viewReplays = Replays bekijken
+# Fuzzy
 chat.userContext.inviteToGame = Nodig uit voor een spel
 chat.userContext.kick = Verwijder...
 chat.userContext.ban = Verban...
@@ -200,7 +201,7 @@ game.gameStatus = Spel status
 game.gameStatus.playing = Spelen
 game.gameStatus.lobby = Wachten tot het spel start
 game.gameStatus.none = Geen
-game.id = ID
+game.id = Replay ID
 game.time = Wanneer
 game.duration = Duur
 game.gameType = Spel type
@@ -854,16 +855,24 @@ game.generateMap.none = Geen
 game.generateMap.lots = Veel
 settings.appearance.backgroundImage = Achtergrond
 settings.appearance.backgroundImage.description = Een achtergrond instellen zal meer geheugen gebruiken.
+settings.checkForPrerelease.description = Wanneer je controleert voor client updates, controleer ook voor pre-releases.
+settings.chat.previewImages.description = Bekijk afbeelding URL's met de muis cursor.
 settings.chat.chatFormat.description = Zal alleen toegepast worden op nieuwe berichten.
 settings.chat.hideFoe.description = Verberg chat berichten die verzonden zijn door spelers gemarkeerd als vijand.
 settings.chat.autoJoinChannels = Automatisch-Meedoen Kanalen.
 settings.notifications.position = Notificatie Positie
 settings.fa.autoDownloadMaps.description = Het automatisch downloaden van missende kaarten.
 settings.general.disallowDiscordJoins = Niet toestaan meedoen via Discord.
+settings.general.disallowDiscordJoins.description = Laat andere speler niet toe aan je spel via Discord Rich Presense.
+settings.general.vaultFallbackLocation.description = Gebruik dit als het downloaden van de map/mod problemen geeft en het spel kan de mappen/mods niet vinden.
 settings.general.advancedIceLog = Schrijf ICE Log bestand
 mapVault.install = Installeer
+chat.userContext.report = Rapporteer speler
+userInfo.ratingHistory.allTime = Voor altijd hoog
 userInfo.ratingHistory.lastYear = Vorig Jaar.
 userInfo.ratingHistory.lastMonth = Laatste maand
+vault.replays.copyReplayId = Kopieer Replay Id
+vault.replays.copyReplayPath = Kopieer Replay Pad
 game.generateMap.less = Minder
 game.generateMap.more = Meer
 discord.join = Doe mee met FAF op Discord
@@ -878,7 +887,48 @@ game.reasonNotValid.ffa = Ieder voor zich
 game.reasonNotValid.unevenTeams = Niet-gelijke Teams.
 game.reasonNotValid.unknown = Onbekend Resultaat
 game.reasonNotValid.multipleTeams = Meerdere Teams
+game.reasonNotValid.civiliansRevealed = Laat burgers zien
 game.reasonNotValid.difficulty = Verkeerde Moeilijkheid
 game.reasonNotValid.expansion = Uitbreiding Uitgeschakeld
 game.reasonNotValid.other = Anders
 exitWarning.title = Waarschuwing
+chat.filter.countryPrompt = Land code
+game.generateMap.tournament = Tournament
+settings.date.system = Auto
+settings.date.mdy = Maand/Dag/Jaar
+settings.date.dmy = Dag/Maand/Jaar
+settings.chat.dateFormat = Formaat datum
+mod.idNumber = \#{0}
+label.copy = kopie
+settings.fa.allowReplayWhileInGame = Laat herhalingen kjken toe in het spel.
+settings.fa.allowReplayWhileInGame.experimental = Experimenteel
+chat.userColor = Kleur
+review.currentVersion = Huidige versie
+review.version = Versie {0}
+review.date = {0} op {1}
+saveQuery = Bewaar zoekopdracht
+logical = Zoekopdracht+
+filter = Filter zoekopdracht
+main.replay = Herhalingen
+main.maps = Mappen
+main.mods = Mods
+game.date = Datum spel
+game.map.author = Maker map
+vault.savedQueries = Favorieten
+vault.saveQuery = Bewaar zoekopdracht
+map.widthPixels = Breedte (in px)
+map.heightPixels = Hoogte (in px)
+query.moreFilters = Meer filters
+query.textFilter = {0}\: {1}
+query.categoryFilter = {0}\: {1}
+query.rangeFilter = {0}\: {1} tot {2}
+query.dateRangeFilter = {0}\: van {1} tot {2}
+query.afterDate = Voor
+query.beforeDate = Na
+search.lowValue = Minimum
+search.highValue = Maximum
+search.afterDate = Na datum
+search.beforeDate = Voor datum
+search.removeQuery = Verwijder zoekopdracht
+game.globalRating = Wereld rang
+game.ladderRating = Positie rang
